--- a/Modul_5/Tugas/app/build.gradle
+++ b/Modul_5/Tugas/app/build.gradle
@@ -9,7 +9,7 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.pm.praktik"
+        applicationId "com.pm.Tugas"
         minSdkVersion 16
         targetSdkVersion 30
         versionCode 1
